# modded-nanogpt

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  train_gpt_medium_tokenmonster.py  train_gpt_tokenmonster.py  triton_kernels_old.py
data/: cached_fineweb10B_tokenmonster.py  fineweb.py  fineweb_tokenmonster.py
