[project]
name = "modded-nanochatgpt"
version = "0.1.0"
description = "NanoGPT (124M) in 2 minutes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy",
	"tqdm",
	"torch",
	"huggingface-hub",
	"kernels",
	"setuptools",
	"typing-extensions==4.15.0",
]

[dependency-groups]
data = ["datasets", "tiktoken"]

