[project]
name = "modded-nanochatgpt"
version = "0.1.0"
description = "NanoGPT (124M) in 2 minutes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy",
	"tqdm",
	"torch==2.10",
	"huggingface-hub",
	"kernels",
	"setuptools",
	"typing-extensions==4.15.0",
	"tokenmonster",
]

[dependency-groups]
data = ["datasets", "tiktoken", "tokenmonster"]

